--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,8 @@
       "target": "ES2020",
       "module": "CommonJS",
       "moduleResolution": "Node",
-      "outDir": "dist",
       "strict": true,
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "skipLibCheck": true,
-      "resolveJsonModule": true,
-      "types": ["node", "express"]
-    },
-    "include": ["src/**/*", "server.ts", "knexfile.ts"],
-    "exclude": ["node_modules", "dist"]
+      "esModuleInterop": true
+    }
   }
   
