--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
